overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp-ingress
  labels:
    homework: frontapp
    training: block4
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: application.cubix.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontapp
            port:
              number: 8080
